--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -6,8 +6,10 @@
 }
 
 .foodItem {
+  border-radius: 10px;
   list-style: none;
   padding: 5px;
+  margin: 15px 0px;
   text-align: center;
   font-size: 18pt;
   height: 50px;
